# grpc-example-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh
idl/: example_grpc.proto
inc/service/: service_impl.h
inc/stub/: client_stub.h
interface/: example_grpc.grpc.pb.cc  example_grpc.grpc.pb.h  example_grpc.pb.cc  example_grpc.pb.h
src/: client.cpp  server.cpp
src/service/: service_impl.cpp
src/stub/: client_stub.cpp
